--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,11 @@ section .intro-container {
     align-items: center;
     background-color:#f9eadc;
 }
+.project-list-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .intro-container h3,h2{
     font-family: 'Rubik', sans-serif;
